refactor: adding github repository link and modifying readme.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <p>Verique os quotes de um tweet!</p>
         </div>
         <a href="#" class="btn__quotes">Quotes</a>
-        <a href="#" class="btn__github">Github</a>
+        <a href="https://github.com/iarlen-reis/X-Quotes" class="btn__github">Github</a>
     </div>
     <script type="text/javascript" src="./dist/index.cjs"></script>
   </body>
