--- a/index.html
+++ b/index.html
@@ -1,22 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="./src/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./src/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X (Twitter) Quotes</title>
   </head>
+
   <body>
     <div class="app">
-        <div class="description">
-          <h1>X Quotes</h1>
-          <p>Verique os quotes de um tweet!</p>
+      <header class="header">
+        <h1 class="header__title">X Quotes</h1>
+        <nav class="header__nav">
+          <ul class="nav__list">
+            <li>
+              <button
+                title="ver favoritos"
+                aria-label="ver tweets favoritos"
+                class="button__favorite"
+              >
+                <i class="fa-solid fa-bookmark"></i>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+        <div class="main__container">
+          <div class="profile__card">
+            <img src="/public/x-quotes.png" alt="imagem" id="tweet__image" />
+            <div class="profile__info">
+              <h1 id="tweet__name">Teste</h1>
+              <span id="tweet__username">@testinho</span>
+            </div>
+          </div>
+          <div class="tweet__content">
+            <h2>Tweet selecionado:</h2>
+            <p id="tweet__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem
+              aliquam quisquam tempora earum doloremque quia dicta totam illum,
+              provident iusto officia repellat ducimus dolore ullam quibusdam
+              dolorem officiis.
+            </p>
+          </div>
+          <div class="actions__container">
+            <a href="#" class="button__quotes button__action">Quotes</a>
+            <button class="button__favorite button__action">Salvar</button>
+          </div>
         </div>
-        <a href="#" class="btn__quotes">Quotes</a>
-        <a href="https://github.com/iarlen-reis/X-Quotes" target="_blank" class="btn__github">Github</a>
+      </main>
+      <footer class="footer">
+        <a
+          href="https://github.com/iarlen-reis/X-Quotes"
+          target="_blank"
+          class="btn__github"
+        >
+          <i class="fa-brands fa-github-alt"></i>
+        </a>
+      </footer>
     </div>
-    <script type="text/javascript" src="./dist/index.cjs"></script>
+    <script type="module" src="./dist/index.js"></script>
   </body>
 </html>
