feat: adding functionality to show stats of the selected tweet.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="app">
       <header class="header">
-        <h1 class="header__title">X Quotes</h1>
+        <img src="/public/logo.png" alt="logo da extensão" id="header__image" />
         <nav class="header__nav">
           <ul class="nav__list">
             <li>
@@ -50,6 +50,26 @@
               provident iusto officia repellat ducimus dolore ullam quibusdam
               dolorem officiis.
             </p>
+          </div>
+          <div class="interation__container">
+            <ul class="interation__list">
+              <li>
+                <i class="fa-regular fa-comment"></i>
+                <span id="tweet__comments">12</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-retweet"></i>
+                <span id="tweet__retweets">2</span>
+              </li>
+              <li>
+                <i class="fa-regular fa-heart"></i>
+                <span id="tweet__likes">24</span>
+              </li>
+              <li>
+                <i class="fa-regular fa-bookmark"></i>
+                <span id="tweet__bookmarks">123</span>
+              </li>
+            </ul>
           </div>
           <div class="actions__container">
             <a href="#" class="button__quotes button__action">Quotes</a>
